[FTL] Fix ArrayPush(ArrayStorage)'s abstract heap https://bugs.webkit.org/show_bug.cgi?id=182960

Reviewed by Saam Barati.

This patch fixes ArrayPush(ArrayStorage)'s abstract heap.
It should always touch ArrayStorage_vector. To unify
vector setting code for the real ArrayStorage_vector and
ScratchBuffer, we use ArrayStorage_vector.atAnyIndex() to
annotate this.

* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileArrayPush):


Canonical link: https://commits.webkit.org/199527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229892 268f45cc-cd09-0410-ab3c-d52691b4dbfc